src/main/kubernetes/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: APP_NAME
    version: v-APP_VERSION
  name: APP_NAME
  annotations:
    deployHash: "DEPLOY_HASH"
spec:
  replicas: N_REPLICA
  selector:
    matchLabels:
      app: APP_NAME
      version: v-APP_VERSION
  template:
    metadata:
      labels:
        app: APP_NAME
        version: v-APP_VERSION
    spec:
      containers:
        - image: CONTAINER_IMAGE
          imagePullPolicy: Always
          name: APP_NAME
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /work/certs
              name: certs
              readOnly: true
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      volumes:
        - name: certs
          secret:
            secretName: certs
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: APP_NAME
    service: APP_NAME
  name: APP_NAME
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: APP_NAME
  type: ClusterIP
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: APP_NAME-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - APP_NAME.sige3.link
      port:
        name: http
        number: 8080
        protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: APP_NAME
spec:
  gateways:
    - APP_NAME-gateway
  hosts:
    - APP_NAME.sige3.link
  http:
    - route:
        - destination:
            host: APP_NAME
            port:
              number: 8080
---
